# QStdOut

./: CMakeLists.txt  README.md
include/: CustomStream.hpp  QStreamListener.hpp  StreamListenerInterface.hpp  Window.hpp
src/: CustomStream.cpp  QStreamListener.cpp  Window.cpp  main.cpp
